--- a/gtk-3.0/apps/unity.css
+++ b/gtk-3.0/apps/unity.css
@@ -39,7 +39,7 @@ UnityDecoration.top {
 }
 
 UnityDecoration.top:backdrop {
-    border: 1px solid rgba (14, 13, 0, 0.03); /* @dark_bg_color - shade (#474642, 0.92) */;
+    border: 1px solid rgba (14, 13, 0, 0.03); /* @dark_bg_color - shade (#474642, 0.92) */
     border-bottom-width: 0;
     background-color: transparent;
     background-clip: border-box;
