--- a/gtk-3.0/gtk-main.css
+++ b/gtk-3.0/gtk-main.css
@@ -61,6 +61,9 @@
 @define-color progressbar_backdrop_fill_b shade(mix(@backdrop_selected_bg_color, grey, 0.10), 0.91);
 @define-color button_border_backdrop_active shade(@backdrop_selected_bg_color, 0.95);
 
+/* esh: for test */
+@define-color test_color #FF00FF;
+
 @import url("gtk-widgets-borders.css");
 @import url("gtk-widgets-assets.css");
 @import url("gtk-widgets.css");
