--- a/gtk-3.0/gtk-main.css
+++ b/gtk-3.0/gtk-main.css
@@ -32,7 +32,7 @@
 @define-color button_bg_color shade (@bg_color, 1.02); /*shade (#CDCCC9, 1.08);*/
 @define-color notebook_button_bg_color shade (@bg_color, 1.02);
 @define-color button_insensitive_bg_color mix (@button_bg_color, @bg_color, 0.6);
-@define-color dark_bg_color #3c3b37;
+@define-color dark_bg_color #3D3C37;
 @define-color dark_fg_color #dfdbd2;
 
 @define-color backdrop_fg_color mix (@bg_color, @fg_color, 0.8);
@@ -61,7 +61,8 @@
 @define-color progressbar_backdrop_fill_b shade(mix(@backdrop_selected_bg_color, grey, 0.10), 0.91);
 @define-color button_border_backdrop_active shade(@backdrop_selected_bg_color, 0.95);
 
-/* esh: for test */
+/* esh: new colors */
+@define-color button_hover_bg_color mix (@selected_bg_color, @bg_color, 0.88);
 @define-color test_color #FF00FF;
 
 @import url("gtk-widgets-borders.css");
