--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -162,9 +162,10 @@
 .button:active {
     /* esh: button bg-color on press-down */
     background-image: -gtk-gradient (linear, left top, left bottom,
-                                     from (shade (@dark_bg_color, 0.7)),
-                                     to (shade (@dark_bg_color, 0.6)));
+                                     from (shade (@button_hover_bg_color, 0.7)),
+                                     to (shade (@button_hover_bg_color, 0.6)));
     border-image-source: url("assets/button-active-hover.png");
+    color: darker(@fg_color)
 }
 
 .button:active:focus {
